tests/cmp/record-pat-dotdot-in-expression.golden
Parse Error:
tests/cmp/record-pat-dotdot-in-expression.trp:3:14 unexpected token TokenDotDot
